
Version 0.3.5 - ??
- [new] Added WFRequestController_HTTPException which takes in a ($msg, $httpCode) which defaults to HTTP 500, internal server exception. This should make it much easier to send arbitrary HTTP codes without having to subclass each one. WFRequestController_HTTPException is *not* emailed through the uncaught exception handler.

Version 0.3.4 - 1/8/2010
- [new] Now PEAR-installable! pear channel-discover apinstein.pearfarm.org; pear install apinstein/phocoa
- [new] Add WFPagedPDOQuery to allow phocoa to paginate any SQL query via PDO. This is also used by Propel 1.3+ with a custom callback object as a modern replacement for WFPagedCreoleQuery.
- [bugfix] Improve the default settings of buildModuleProgrammatically for WFYAHOO_widget_Module. Prevents Modules from being re-arranged on page once rendered.
- [bugfix] Add html escaping to WFDieselKeyword.
- [bugfix] Add encodeUriComponent() to WFYAHOO_widget_TreeView ajax methods so that nodeId's with '/' characters work.
- [bugfix] Make WFDieselFacet compatible with YUI 2.7.0. It was eating clicks and getting stuck on "loading".
- [bugfix] Fix bug in menu facets where onChange handler no longer worked due to newer version of prototype scoping code from evalScripts.
- [improved] The phocoa shell is now even better, with full support for require'd files, tolerance of "fatal" errors, and more.

Version 0.3.3 - 11/2/2009
- [BC-break] [new] WFRPC.execute() now automatically array-ifies arguments that are arrays of scalars. IE array(1,2,3) ==> arg_0[]=1&arg_0[]=2&arg_0[]=3.

Version 0.3.2 - 10/15/2009
- [new] Added WFRPC.method (accepts 'get' or 'post').

Version 0.3.1 - 10/8/2009
- [bugfix] NullPlaceholder settings from one binding no longer "inject" themselves into other bindings on the same widget that don't have NullPlaceholder's.
- [bugfix] Convert WFRPC escape() calls to encodeUriComponent; fix WFYAHOO_widget_TreeView to not encode data anymore now that WFRPC does it for us.

Version 0.3.0 - 10/1/2009